# hackernews_parser

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
.prompts/: code-protocol-extrict.md  code-standard.md
.prompts/PRD-Task List-Implement/: implement-task.md
data/: hackernews_v1.json  hackernews_v2.json
data/example/: hackernews_v1.json  hackernews_v2.json
examples/: api_usage.py
src/hackernews_parser/: __main__.py  api.py  hackernews_parser_v1.py  hackernews_parser_v2.py  server.py  utils.py
src/hackernews_parser/entities/: v1.py  v2.py
src/parser/: hackernews_parser_v1.py  hackernews_parser_v2.py
src/parser/entities/: v2.py
tests/: __init__.py  load_test_data.py  test_api.py  test_compatibility.py  test_hackernews_parser_v1.py  test_hackernews_parser_v2.py  test_parser.py
